--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,19 @@ a:hover {
   text-decoration: underline;
 }
 
+body {
+  background-color: rgb(237, 238, 240);
+}
+
+.myFancyBlock{
+  display: flex;
+  justify-content: center;
+}
+
 .postList {
   display: flex;
   align-items: center;
   flex-direction: column;
-  background-color: rgb(237, 238, 240);
 }
 
 .post {
@@ -107,4 +115,52 @@ a:hover {
 .comment__body::first-letter,
 .comment__name::first-letter {
   text-transform: uppercase;
+}
+
+.loadDataButton {
+  border: none;
+  margin-top: 20px;
+  height: 100px;
+  width: 200px;
+  font-size: 26px;
+  color: aliceblue;
+  border-radius: 3px;
+  background-color: rgb(102, 167, 247);
+  transition-duration: 0.1s;
+}
+
+.loadDataButton:active {
+  animation-name: fall;
+  animation-duration: 22s;
+}
+
+.loadDataButton:hover {
+  cursor: pointer;
+  background-color: rgb(124, 180, 248);
+  transition-duration: 0.1s;
+  animation-name: awesomeAnimation;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes awesomeAnimation {
+  from {
+    transform: rotate(-2deg);
+    animation-timing-function: ease-out;
+  }
+  25% {
+    transform: rotate(1deg);
+    animation-timing-function: ease-in;
+  }
+  50% {
+    transform: rotate(-4deg);
+    animation-timing-function: ease-out;
+  }
+  75% {
+    transform: rotate(1deg);
+    animation-timing-function: ease-in;
+  }
+  to {
+    transform: rotate(-1deg);
+  }
 }
