--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
   background-color: rgb(237, 238, 240);
 }
 
-.myFancyBlock{
+.myFancyBlock {
   display: flex;
   justify-content: center;
 }
@@ -29,16 +29,15 @@ body {
   box-shadow: 0 1px 0 0 #d7d8db, 0 0 0 1px #e3e4e8;
   background-color: white;
   grid-gap: 5px;
+  padding: 15px;
   grid-template-areas:
-    ". . . . ."
-    ". author-name . email ."
-    ". title title title . "
-    ". body body body ."
-    ". address address . ."
-    ". comments comments comments ."
-    ". . . . .";
-  grid-template-columns: 15px 150px 200px 150px 15px;
-  grid-template-rows: 15px auto auto auto auto auto 15px;
+    "author-name . email"
+    "title title title "
+    "body body body "
+    "address address ."
+    "comments comments comments";
+  grid-template-columns: 150px 200px 150px;
+  grid-template-rows: auto auto auto auto auto;
 }
 
 .post__title {
@@ -117,7 +116,8 @@ body {
   text-transform: uppercase;
 }
 
-.loadDataButton {
+.loadPostsButton {
+  display: block;
   border: none;
   margin-top: 20px;
   height: 100px;
@@ -129,18 +129,21 @@ body {
   transition-duration: 0.1s;
 }
 
-.loadDataButton:active {
-  animation-name: fall;
-  animation-duration: 22s;
-}
-
-.loadDataButton:hover {
+.loadPostsButton:hover {
   cursor: pointer;
-  background-color: rgb(124, 180, 248);
+  opacity: 0.8;
   transition-duration: 0.1s;
   animation-name: awesomeAnimation;
   animation-duration: 1s;
   animation-iteration-count: infinite;
+}
+
+/* .loadPostsButton:focus {
+  outline: none;
+} */
+
+.error {
+  background-color: rgb(255, 65, 65);
 }
 
 @keyframes awesomeAnimation {
