--- a/src/App.scss
+++ b/src/App.scss
@@ -11,9 +11,19 @@ body {
   background-color: rgb(237, 238, 240);
 }
 
+.searchField {
+  width: 100%;
+  height: 30px;
+  border-radius: 4px;
+  padding: 0 15px;
+  max-width: 510px;
+  border: 1px solid rgb(209, 209, 209);
+}
+
 .myFancyBlock {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .postList {
@@ -37,7 +47,7 @@ body {
     "address address ."
     "comments comments comments";
   grid-template-columns: 150px 200px 150px;
-  grid-template-rows: auto auto auto auto auto;
+  grid-template-rows: repeat(5, auto);
 }
 
 .post__title {
@@ -56,6 +66,7 @@ body {
   @extend %upperCase;
   font-size: 13px;
   grid-area: body;
+  white-space: pre-line;
 }
 
 .post__email {
