--- a/src/App.scss
+++ b/src/App.scss
@@ -46,11 +46,11 @@ body {
   grid-gap: 5px;
   padding: 15px;
   grid-template-areas:
-    "author-name . email"
-    "title title title "
-    "body body body "
-    "address address ."
-    "comments comments comments";
+    'author-name . email'
+    'title title title '
+    'body body body '
+    'address address .'
+    'comments comments comments';
   grid-template-columns: 150px 200px 150px;
   grid-template-rows: repeat(5, auto);
 }
@@ -93,10 +93,10 @@ body {
   left: -15px;
   top: 15px;
   display: block;
-  content: "";
+  content: '';
   height: 13px;
   width: 13px;
-  background: url("imgs/location_ico.svg") no-repeat center;
+  background: url('imgs/location_ico.svg') no-repeat center;
   background-size: cover;
 }
 
